# OAuth2Home

./: Cargo.toml  README.md
migrations/: 1_initial.sql
src/: error.rs  lib.rs  redirect.rs
src/routes/: authorization.rs  mod.rs  token.rs
